<resources>
    <string name="app_name">Soil Science Dictionary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_favourite">Favourite</string>
    <string name="title_activity_flash_card">Flash Cards</string>
    <string name="favourite_icon">favourite icon</string>
    <string name="word">Word:</string>
    <string name="description">Description:</string>
    <string name="details_menu_text">increase text size</string>
    <string name="details_share">Share</string>
    <string name="title_activity_search">Search</string>
    <string name="rec_userName">User Name</string>
    <string name="title_activity_details"> </string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_developer">Developer</string>
    <string name="title_activity_favourite">Favourite</string>
    <string name="title_activity_flash">Flash Cards</string>
    <string name="title_activity_user_add">Add Own word</string>
    <string name="details_word_label">Word: </string>
    <string name="details_des_label">Description: </string>
    <string name="action_search">Search</string>
    <string name="action_night">Night Mode</string>
    <string name="action_sst">Speech to Text</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="add">Add New</string>
    <string name="legal">Terms of uses</string>
    <string name="about">About</string>
    <string name="copyright">Copyright</string>
    <string name="developer">Developer</string>
    <string name="nightMode">Set NightMode</string>
    <string name="nav_choose_theme">Choose Theme</string>
    <string name="hintWord">Write Word</string>
    <string name="hintDescription">Write description of word</string>
    <string name="button">Click to add</string>
    <string name="noWordAdd">you don\'t add any favourite word yet.
        You can add your favourite word from word details. That\'s are listed here.</string>
    <string name="add_your_own_word">Add your own word</string>
    <string name="search">Search…</string>
    <string name="title_activity_color">Choose theme</string>
    <string name="sbackup">Backup Settings</string>
    <string name="sAdvance">Advance Settings</string>
    <string name="sTextSmallLabel">Small</string>
    <string name="sTextMediumLabel">Medium</string>
    <string name="sTextModerateLabel">Moderate</string>
    <string name="sTextLargeLabel">Large</string>
    <string name="sTextExtraLargeLabel">Extra Large</string>
    <string name="sTextSmallValue">15</string>
    <string name="sTextMediumValue">17</string>
    <string name="sTextModerateValue">20</string>
    <string name="sTextLargeValue">23</string>
    <string name="sTextExtraLargeValue">26</string>
    <string name="textSizeKey" translatable="false">textSize</string>
    <string name="textSizeLabel">Sheet Text Size</string>
    <string name="syncWeek">7 days</string>
    <string name="syncWeekTwo">15 days</string>
    <string name="syncMonth">30 days</string>
    <string name="syncWeekValue">7</string>
    <string name="syncWeekTwoValue">15</string>
    <string name="syncMonthValue">30</string>
    <string name="syncKey" translatable="false">sync</string>
    <string name="syncLabel">Sync Interval</string>
    <string name="switchKey" translatable="false">NightMode</string>
    <string name="switchLabel">Night Mode</string>
    <string name="switchON">Night Mode ON</string>
    <string name="switchOFF">Night Mode OFF</string>
    <string name="switchShare">ShareData</string>
    <string name="switchShareLabel">Share you added word</string>
    <string name="switchShareON">data will share</string>
    <string name="switchShareOFF">Data keep private</string>
    <string name="switchSearch">Search</string>
    <string name="switchSearchLabel">Search Keyboard</string>
    <string name="switchSearchON">Search keyboard will be shown on app start</string>
    <string name="switchSearchOFF">Search keyboard will be hidden on app start</string>
    <string name="bps_title">Backup data</string>
    <string name="bps_summery">Import and export your data.
        You can backup your data into your SD Card</string>
    <string name="bps_key">backup</string>
    <string name="bps_ex_fav_key">export_favourite</string>
    <string name="bps_ex_fav_title">Export Favourite List</string>
    <string name="bps_ex_fav_summery">Export your favourite list on your sd card</string>
    <string name="bps_ex_add_key">export_add</string>
    <string name="bps_ex_add_title">Export added word List</string>
    <string name="bps_ex_add_summery">Export your added word list on your sd card</string>
    <string name="bps_im_fav_key">import_favourite</string>
    <string name="bps_im_fav_title">Import Favourite List</string>
    <string name="bps_im_fav_summery">Click to import your favourite words backup data from storage</string>
    <string name="bps_im_add_key">import_add</string>
    <string name="bps_im_add_title">Import added word List</string>
    <string name="bps_im_add_summery">Click to import your own added words backup data from storage</string>
    <string name="app_intro">app intro</string>
    <string name="advance_summery">Some advance settings for advance user</string>
    <string name="advance_key">advance_pref</string>
    <string name="advance_dir_add_key">dir</string>
    <string name="advance_dir_title">Change Default Directory</string>
    <string name="advance_dir_summery">Default directory location for your data backup</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Soil Science Dictionary</string>
    <string name="slide_1_desc">A complete dictionary app contains all soil related keyword</string>
    <string name="slide_2_title">Larger database</string>
    <string name="slide_2_desc">Huge database contain 1000+ word</string>
    <string name="slide_3_title">User Friendly Design</string>
    <string name="slide_3_desc">User friendly design  and also maintain material design guideline</string>
    <string name="slide_4_title">Open source</string>
    <string name="slide_4_desc">a complete open source app</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="nightmode_main_menu">NightMode</string>
    <string name="developer_picture">Developer picture</string>
    <string name="developer_details">a student a </string>
    <string name="developer_name">Shudipto Trafder</string>
    <string name="random_word">Random word</string>
    <string name="title_activity_about">About</string>
    <string name="copyrightMS">Soil Science\nAll Content reserved by &#169; Shudipto Trafder.</string>
    <string name="terms_of_use">This is a completely open source app.\n
                  You can redistribute and rebuild this app. you are also allowed to change any part of this app.\n
                  But you can not commercially distribute, redistribute and monetize this app without developer permission.\n
                  So if the question for commercial use, your are restricted. you need permission from the developer.
                  and for non-commercial use, you can feel free to use.
    </string>
    <string name="license">
        This app is under Apache License 2.0\n\n
        Copyright {2017} {Shudipto Trafder}\n

   Licensed under the Apache License, Version 2.0 (the "License");\n
   you may not use this file except in compliance with the License.\n
   You may obtain a copy of the License at\n
   \n
       http://www.apache.org/licenses/LICENSE-2.0\n
        \n
   Unless required by applicable law or agreed to in writing, software\n
   distributed under the License is distributed on an "AS IS" BASIS,\n
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
   See the License for the specific language governing permissions and\n
   limitations under the License.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="clear_history">clear history</string>
    <string name="speak_voice">Speak now</string>
    <string name="title_activity_add">Add Words</string>
    <string name="title_activity_app_about">App About</string>
    <string name="nav_favourites">Favourites</string>
    <string name="nav_flash">Flash Cards</string>
    <string name="nav_add_words">Add Words</string>
    <string name="nav_about">About</string>
    <string name="nav_about_app">About App</string>
    <string name="nav_developers">Developers</string>
    <string name="nav_polices">Polices</string>
    <string name="nav_legal_notice">Acknowledgement</string>
    <string name="nav_privacy_polices">Privacy Polices</string>
    <string name="nav_terms_of_uses">Terms of Uses</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_choose_themes">Choose Themes</string>
    <string name="noti_channel">Soil science dictionary</string>
    <string name="add_word_empty_tv">You don\'t add any word yet.\nYou can add your own custom word and make your personal dictionary.</string>
    <string name="increase_textsize">Increase TextSize</string>
    <string name="dev1">Shudipto Trafder</string>
    <string name="dev1_bio">Learner, Programmer, Dreamer</string>
    <string name="dev1_work">Work as Android App Developer</string>
    <string name="dev2">Mahabubur Rahaman</string>
    <string name="dev2_bio">Thinker, Learner, Dreamer</string>
    <string name="dev2_work">Work as Database Expert</string>
    <string name="dev_find_me">Find me:</string>
    <string name="empty_fav_txt">You don\'t added \nany favourite word yet</string>
    <string name="add_word">Add Word</string>
    <string name="app_about1">Soil science dictionary is a completely open source app which is developed for the educational and informational purpose only. </string>
    <string name="app_about2">Our main goal is to make a collection of the soil terminologies so that the user can easily find it.</string>
    <string name="action_clear">Clear recent search</string>
    <string name="tms_label">Terms of Uses</string>
    <string name="tms_txt">Soil science dictionary is a completely open source app. This app developed for educational purpose only. No commercial intention involved with this app. Commercial use is strictly prohibited. Rebuilding and redistribution of this app without developer permission is offensive.</string>
    <string name="ack">Acknowledgment</string>
    <string name="ack_txt">The developer greatly acknowledges the Soil Science Society of America and Canada Department of Agriculture for their books Glossary of Soil Science terms and Glossary of terms in Soil Science.</string>
    <string name="night_mode_main_menu">Night Mode</string>
</resources>