<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Developed By Shudipto Trafder
  ~ on 8/17/18 11:19 PM
  ~ Copyright (c) 2018 Shudipto Trafder.
  -->

<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- complete add icon -->

    <Preference
        android:icon="@drawable/ic_025_cloud_1"
        android:key="@string/advance_dir_add_key"
        android:selectable="true"
        android:summary="@string/advance_dir_summery"
        android:title="@string/advance_dir_title" />

    <PreferenceCategory android:title="Share Data"
        android:iconSpaceReserved="false"
        tools:targetApi="o">

        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_024_cloud"
            android:key="@string/switchShare"
            android:summaryOff="@string/switchShareOFF"
            android:summaryOn="@string/switchShareON"
            android:title="@string/switchShareLabel" />

    </PreferenceCategory>


</PreferenceScreen>