<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Developed By Shudipto Trafder
  ~ on 8/17/18 12:49 PM
  ~ Copyright (c) 2018 Shudipto Trafder.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- complete add icon -->
    <item
        android:id="@+id/action_txt"
        android:orderInCategory="40"
        android:title="@string/increase_textsize"
        android:icon="@drawable/text_increase"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_favourite"
        android:orderInCategory="100"
        android:icon="@drawable/ic_like_blank"
        android:title="@string/action_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_clear"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/action_clear"
        app:showAsAction="never" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/details_share"
        app:showAsAction="ifRoom"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"/>
</menu>
