<?xml version="1.0" encoding="utf-8"?><!--
  ~ Developed By Shudipto Trafder
  ~  on 8/27/18 11:18 PM
  ~  Copyright (c)2018  Shudipto Trafder.
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dev_scroll"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.DeveloperActivity"
    tools:showIn="@layout/activity_developer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="2dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dev_pic"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="Developer Shudipto Trafder"
                    android:src="@drawable/sdt"
                    app:layout_constraintDimensionRatio="w,1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:padding="10dp"
                    android:text="@string/dev1"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textSize="@dimen/dev_name"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="@+id/imageView2" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:padding="5dp"
                    android:text="@string/dev1_bio"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/txtColor"
                    android:textSize="@dimen/dev_sub_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="588dp"
                    android:layout_height="57dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:padding="10dp"
                    android:text="@string/dev1_work"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textSize="@dimen/dev_sub_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageView2" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:maxWidth="700dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/dev_fb"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_007_facebook" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/dev_ln"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_009_linkedin_1" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/dev_git"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_010_github" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/dev_em"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_012_email" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textStyle="bold"
                    android:textSize="@dimen/dev_sub_name"
                    android:text="@string/dev_find_me"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/txtColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="?attr/colorAccent" />

        <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:cardCornerRadius="2dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageView12"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dev_pic"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ri"
                    app:layout_constraintDimensionRatio="w,1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars[2]" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:padding="10dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/dev2"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textSize="@dimen/dev_name"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="@id/imageView12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView12"
                    tools:layout_editor_absoluteY="80dp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:padding="5dp"
                    android:text="@string/dev2_bio"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/txtColor"
                    android:textSize="@dimen/dev_sub_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView14"
                    app:layout_constraintTop_toBottomOf="@+id/textView14" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:padding="10dp"
                    android:text="@string/dev2_work"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textSize="@dimen/dev_sub_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView12" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:maxWidth="700dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/dev2_fb"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_007_facebook" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/dev2_ln"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_009_linkedin_1" />

                    <!--
                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/dev2_git"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_010_github" />

-->
                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/dev2_em"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_012_email" />


                </LinearLayout>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="@dimen/dev_sub_name"
                    android:textStyle="bold"
                    android:text="@string/dev_find_me"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/txtColor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView16" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>